Add device sync state API
